--- a/scss/index.scss
+++ b/scss/index.scss
@@ -119,6 +119,7 @@ body {
   .testimonial {
     &:nth-child(1) {
       grid-column: 1 / 5;
+      order: -1;
     }
 
     &:nth-child(2) {
@@ -128,6 +129,7 @@ body {
     &:nth-child(4) {
       grid-column: 1 / 3;
       grid-row: 2 / 3;
+      order: -1;
     }
 
     &:nth-child(5) {
@@ -154,6 +156,7 @@ body {
 
     &:nth-child(4) {
       grid-column: 3 / 5;
+      order: 1; // To fix incorrect shadow overlap
     }
 
     &:nth-child(5) {
@@ -180,6 +183,7 @@ body {
     &:nth-child(5) {
       grid-column: 4 / 5;
       grid-row: 1 / 3;
+      order: 1; // To fix incorrect shadow overlap
     }
   }
 }
